--- a/Makefile.standalone
+++ b/Makefile.standalone
@@ -256,15 +256,13 @@ endif
 
 BASE_CXXFLAGS := -std=gnu++11 -Wall -Wextra -fno-rtti \
   -fno-exceptions $(OPTLEVEL) $(ASSERTIONS) -g -pedantic \
-  $(LLVM_EXTRA_WARNINGS) $(CXX_EXTRA) -MP -MD
+  $(LLVM_EXTRA_WARNINGS) $(CXX_EXTRA) -MP -MD -Werror
 
 ifdef WASM
-  # The WASM code inherits a lot of V8 code, which does not compile with
-  # -Werror.
   BASE_CXXFLAGS := $(BASE_CXXFLAGS) $(V8_CXXFLAGS) -DALLOW_WASM=1
   OBJDIR := $(OBJDIR)+Wasm
 else
-  BASE_CXXFLAGS := $(BASE_CXXFLAGS) -Werror -DALLOW_WASM=0
+  BASE_CXXFLAGS := $(BASE_CXXFLAGS) -DALLOW_WASM=0
 endif
 
 CXXFLAGS := $(LLVM_CXXFLAGS) $(BASE_CXXFLAGS) $(CXX_DEFINES) $(HOST_FLAGS) \
