Added definition of ALLOW_WASM to CMakeLists.
This change is required to run "toolchain_build_pnacl.py --cmake", since
without it, ALLOW_WASM will be undefined and throw a compilation error.

BUG=None
R=eholk@chromium.org

Review URL: https://codereview.chromium.org/1897323002 .

--- a/CMakeLists.txt
+++ b/CMakeLists.txt
@@ -18,6 +18,7 @@ if(PNACL_BROWSER_TRANSLATOR)
   -DALLOW_LLVM_IR_AS_INPUT=0
   -DALLOW_TIMERS=0
   -DALLOW_MINIMAL_BUILD=1
+  -DALLOW_WASM=0
   -DPNACL_BROWSER_TRANSLATOR=1
   )
 else()
@@ -28,6 +29,7 @@ else()
   -DALLOW_LLVM_IR_AS_INPUT=1
   -DALLOW_TIMERS=1
   -DALLOW_MINIMAL_BUILD=0
+  -DALLOW_WASM=0
   -DPNACL_BROWSER_TRANSLATOR=0
   )
 endif()
