Subzero. X86. Lowers shufflevector using xmm instructions.
BUG= https://bugs.chromium.org/p/nativeclient/issues/detail?id=4136
R=stichnot@chromium.org

Review URL: https://codereview.chromium.org/1909013002 .

--- a/crosstest/crosstest.cfg
+++ b/crosstest/crosstest.cfg
@@ -56,4 +56,4 @@ test: test_sync_atomic.cpp
 
 [test_vector_ops]
 driver: test_vector_ops_main.cpp
-test: test_vector_ops.ll
+test: test_vector_ops.cpp test_vector_ops_ll.ll
