Subzero: Suppress a warning as a result of an updated clang.
Also improve some diagnostic output in the Makefile.

BUG= none
R=jpp@chromium.org

Review URL: https://codereview.chromium.org/1941593002 .

--- a/CMakeLists.txt
+++ b/CMakeLists.txt
@@ -32,6 +32,7 @@ else()
   -DALLOW_WASM=0
   -DPNACL_BROWSER_TRANSLATOR=0
   )
+  add_compile_options(-Wno-undefined-var-template)
 endif()
 
 target_link_libraries(pnacl-sz pthread)
