Subzero: Update for LLVM 3.9 (trunk).
The purpose is to allow pnacl-sz to be built within an LLVM checkout (version 3.9 or later), and not require the complex PNaCl build environment.

Within an LLVM checkout, one would do something like the following:
  cd projects
  git clone https://chromium.googlesource.com/native_client/pnacl-subzero
  # change to LLVM build directory
  cmake -G "Ninja" <path_to_llvm_source_dir>
  ninja

A follow-on CL will add in the PNaCl bitcode reader source files that are needed for compiling and linking.

BUG= none
R=jpp@chromium.org

Review URL: https://codereview.chromium.org/1961743002 .

--- a/CMakeLists.txt
+++ b/CMakeLists.txt
@@ -35,4 +35,11 @@ else()
   add_compile_options(-Wno-undefined-var-template)
 endif()
 
+# Define PNACL_LLVM for LLVM_VERSION <= 3.7
+if((NOT LLVM_VERSION_MAJOR GREATER 3) AND (NOT LLVM_VERSION_MINOR GREATER 7))
+  add_definitions(
+    -DPNACL_LLVM
+    )
+endif()
+
 target_link_libraries(pnacl-sz pthread)
