--- a/Makefile.standalone
+++ b/Makefile.standalone
@@ -110,6 +110,8 @@ ifdef SZTARGET
   BASE_CXX_DEFINES += -DSZTARGET=$(SZTARGET)
 endif
 
+BASE_CXX_DEFINES += -DPNACL_LLVM
+
 CXX_DEFINES := $(BASE_CXX_DEFINES) -DPNACL_BROWSER_TRANSLATOR=0
 
 ifdef NOASSERT
