--- a/crosstest/crosstest.cfg
+++ b/crosstest/crosstest.cfg
@@ -9,7 +9,14 @@ flags: --sz=-fmem-intrin-opt
 
 [test_arith]
 driver: test_arith_main.cpp
-test: test_arith.cpp test_arith_frem.ll test_arith_sqrt.ll test_arith_fabs.ll
+# Note: Originally test_arith.cpp was used to generate the bulk of the tests.
+# However, the C++ integral promotion rules mean that most of the time i8 and
+# i16 operations are not actually tested; instead, they are extended to i32 and
+# only the i32 operation is tested.  To help fix this, the relevant parts of
+# test_arith.cpp are commented out, and instead a python script auto-generates
+# test_arith_ll.ll which contains the proper functionality.
+#test: test_arith.cpp test_arith_frem.ll test_arith_sqrt.ll test_arith_fabs.ll
+test: test_arith_ll.ll test_arith.cpp test_arith_sqrt.ll test_arith_fabs.ll
 
 [test_bitmanip]
 driver: test_bitmanip_main.cpp
