--- a/Makefile.standalone
+++ b/Makefile.standalone
@@ -283,6 +283,7 @@ SB_LDFLAGS := $(LINKOPTLEVEL) $(LD_EXTRA)
 # compile, in the hope of improving parallel build time.
 SRCS = \
   IceAssemblerARM32.cpp \
+  IceInstrumentation.cpp \
   IceInstARM32.cpp \
   IceInstMIPS32.cpp \
   IceInstX8632.cpp \
