Subzero: Embed the revision string into translated output.
Modify the Makefiles to pass in the current git hash, which is embedded into the translated output.  As a side effect, it is also embedded into the Subzero translator binary.  This is useful for two reasons:

1. The PNaCl component update process is somewhat manual, making it tricky long after the fact to know exactly which revision was pushed, e.g. when trying to reproduce a bug or crash.

2. A translated binary can be inspected to make sure Chrome used the expected revision of Subzero.  (And also to verify that pnacl-sz was used rather than pnacl-llc.)

The revision string is suppressed for lit tests, because a number of tests seem overly strict about global initializer expectations.

BUG= none
R=jpp@chromium.org

Review URL: https://codereview.chromium.org/2218363002 .

--- a/Makefile.standalone
+++ b/Makefile.standalone
@@ -111,6 +111,7 @@ ifdef SZTARGET
 endif
 
 BASE_CXX_DEFINES += -DPNACL_LLVM
+BASE_CXX_DEFINES += -DSUBZERO_REVISION=$(shell git rev-parse HEAD)
 
 CXX_DEFINES := $(BASE_CXX_DEFINES) -DPNACL_BROWSER_TRANSLATOR=0
 
@@ -320,6 +321,7 @@ SRCS = \
   IceOperand.cpp \
   IceRangeSpec.cpp \
   IceRegAlloc.cpp \
+  IceRevision.cpp \
   IceRNG.cpp \
   IceSwitchLowering.cpp \
   IceThreading.cpp \
