Subzero: Fix build errors with LLVM trunk.
1. Some explicit conversions between Inst* and InstList::iterator are needed.

2. llvm::sys::PrintStackTraceOnErrorSignal() has a new argument.

3. A previous CL neglected to plumb in SUBZERO_REVISION for the cmake build.

BUG= none
R=eholk@chromium.org

Review URL: https://codereview.chromium.org/2247253005 .

--- a/CMakeLists.txt
+++ b/CMakeLists.txt
@@ -50,4 +50,11 @@ else()
   add_compile_options(-Wno-undefined-var-template)
 endif()
 
+execute_process(COMMAND git rev-parse HEAD
+  WORKING_DIRECTORY ${CMAKE_CURRENT_SOURCE_DIR}
+  OUTPUT_VARIABLE SUBZERO_REVISION
+  OUTPUT_STRIP_TRAILING_WHITESPACE
+  )
+add_definitions(-DSUBZERO_REVISION=${SUBZERO_REVISION})
+
 target_link_libraries(pnacl-sz pthread)
