Subzero: Include commit count in revision string.
Instead of the version string being like this:
  Subzero_revision_efdf412032f7622a0663696896708d75b82e92f6
Make it more like this:
  Subzero_revision_1089_efdf412032f7622a0663696896708d75b82e92f6
I.e., provide both git hash and commit count.

That way, it's easier to compare revision strings and determine which one is newer.

BUG= none
R=eholk@chromium.org

Review URL: https://codereview.chromium.org/2251153002 .

--- a/CMakeLists.txt
+++ b/CMakeLists.txt
@@ -52,9 +52,14 @@ endif()
 
 execute_process(COMMAND git rev-parse HEAD
   WORKING_DIRECTORY ${CMAKE_CURRENT_SOURCE_DIR}
-  OUTPUT_VARIABLE SUBZERO_REVISION
+  OUTPUT_VARIABLE SZ_GIT_HASH
   OUTPUT_STRIP_TRAILING_WHITESPACE
   )
-add_definitions(-DSUBZERO_REVISION=${SUBZERO_REVISION})
+execute_process(COMMAND git rev-list --count HEAD
+  WORKING_DIRECTORY ${CMAKE_CURRENT_SOURCE_DIR}
+  OUTPUT_VARIABLE SZ_COMMIT_COUNT
+  OUTPUT_STRIP_TRAILING_WHITESPACE
+  )
+add_definitions(-DSUBZERO_REVISION=${SZ_COMMIT_COUNT}_${SZ_GIT_HASH})
 
 target_link_libraries(pnacl-sz pthread)
