--- a/Makefile.standalone
+++ b/Makefile.standalone
@@ -111,7 +111,9 @@ ifdef SZTARGET
 endif
 
 BASE_CXX_DEFINES += -DPNACL_LLVM
-BASE_CXX_DEFINES += -DSUBZERO_REVISION=$(shell git rev-parse HEAD)
+SZ_COMMIT_COUNT := $(shell git rev-list --count HEAD)
+SZ_GIT_HASH := $(shell git rev-parse HEAD)
+BASE_CXX_DEFINES += -DSUBZERO_REVISION=$(SZ_COMMIT_COUNT)_$(SZ_GIT_HASH)
 
 CXX_DEFINES := $(BASE_CXX_DEFINES) -DPNACL_BROWSER_TRANSLATOR=0
 
