LLVM 7.0 dEQP fixes
dEQP using SwiftShader with LLVM 7.0 has a number of failures. Most
of them were cause either by using unsafe floating point math or by
a "__chkstk not found" error.

Change-Id: I16f14b3aee6f24717ec90ce2ea5bae8b4439620a

--- a/CMakeLists.txt
+++ b/CMakeLists.txt
@@ -255,6 +255,7 @@ endif()
 
 if(WIN32)
     add_definitions(-DWINVER=0x501 -DNOMINMAX -DSTRICT)
+    set_cpp_flag("-DDEBUGGER_WAIT_DIALOG" DEBUG)
     set(CMAKE_FIND_LIBRARY_PREFIXES ${CMAKE_FIND_LIBRARY_PREFIXES} "" "lib")
 endif()
 
