Descriptor Update Template implementation
Basic implementation of descriptor update template.
Only supports VK_DESCRIPTOR_UPDATE_TEMPLATE_TYPE_DESCRIPTOR_SET template type.

Bug b/123244275

Change-Id: Iaf7c1e52bee6d2683a2f34bd2f780396aa953442
Reviewed-on: https://swiftshader-review.googlesource.com/c/SwiftShader/+/26568
Tested-by: Alexis Hétu <sugoi@google.com>
Reviewed-by: Nicolas Capens <nicolascapens@google.com>
Reviewed-by: Chris Forbes <chrisforbes@google.com>

--- a/src/Vulkan/vulkan.vcxproj
+++ b/src/Vulkan/vulkan.vcxproj
@@ -106,6 +106,7 @@ copy "$(OutDir)vk_swiftshader.dll" "$(SolutionDir)out\$(Configuration)_$(Platfor
     <ClCompile Include="VkDebug.cpp" />
     <ClCompile Include="VkDescriptorPool.cpp" />
     <ClCompile Include="VkDescriptorSetLayout.cpp" />
+    <ClCompile Include="VkDescriptorUpdateTemplate.cpp" />
     <ClCompile Include="VkDevice.cpp" />
     <ClCompile Include="VkDeviceMemory.cpp" />
     <ClCompile Include="VkFramebuffer.cpp" />
@@ -202,6 +203,7 @@ copy "$(OutDir)vk_swiftshader.dll" "$(SolutionDir)out\$(Configuration)_$(Platfor
     <ClInclude Include="VkDebug.hpp" />
     <ClInclude Include="VkDescriptorPool.hpp" />
     <ClInclude Include="VkDescriptorSetLayout.hpp" />
+    <ClInclude Include="VkDescriptorUpdateTemplate.hpp" />
     <ClInclude Include="VkDestroy.h" />
     <ClInclude Include="VkDevice.hpp" />
     <ClInclude Include="VkDeviceMemory.hpp" />
